# qsbot_simulation

./: CMakeLists.txt  README.md  package.xml  urdf_visualize.urdf
config/: qs_diff_drive.yaml  qs_joint_states.yaml  qs_planar_move.yaml
launch/: gazebo.launch  qs_bot_drive_diff.launch  qs_bot_drive_planar.launch
meshes/: LiDAR.STL  base_frame.STL  mecanum_wheel.STL
src/: qs_bot_planar_move.cpp  state_publisher.cpp
urdf/: qs_bot.gv  qs_bot.xacro
